# src/doc/swagger_doc.json
@@ -112,6 +112,108 @@
           }
         }
       }
+    },
+    "/product/searchProductImages": {
+      "get": {
+        "tags": [
+          "product"
+        ],
+        "description": "Pesquisar produtos",
+        "parameters": [
+          {
+            "name": "term",
+            "description": "Termo para buscar o produto",
+            "type": "string",
+            "in": "query"
+          },
+          {
+            "name": "page",
+            "description": "Página de itens.",
+            "required": true,
+            "type": "integer",
+            "in": "query"
+          },
+          {
+            "name": "itens",
+            "description": "Quantidade de itens a buscar.",
+            "required": true,
+            "type": "integer",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Sucesso.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "idProduct": {
+                        "type": "number",
+                        "example": 0
+                      },
+                      "name": {
+                        "type": "string",
+                        "example": "nome"
+                      },
+                      "description": {
+                        "type": "string",
+                        "example": "descricao"
+                      },
+                      "promotionalPrice": {
+                        "type": "string",
+                        "example": "preco promocional"
+                      },
+                      "originalPrice": {
+                        "type": "string",
+                        "example": "preco original"
+                      },
+                      "images": {
+                        "type": "string",
+                        "example": "imagens"
+                      },
+                      "category": {
+                        "type": "string",
+                        "example": "categoria"
+                      }
+                    }
+                  }
+                },
+                "status": {
+                  "type": "boolean",
+                  "example": true
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "500": {
+            "description": "Erro.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "msg": {
+                  "type": "string",
+                  "example": "Mensagem de erro."
+                },
+                "status": {
+                  "type": "boolean",
+                  "example": false
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
