# src/models/ProductImages.model.ts
@@ -1,0 +1,24 @@
+const Sequelize = require('sequelize');
+import { database, options } from '../database/Database'
+import { productModel } from './Product.model'
+
+const productImagesModel = database.define('productsimages', {
+    idImage: {
+        type: Sequelize.INTEGER,
+        primaryKey: true,
+        autoIncrement: true,
+        allowNull: false,
+    },
+    idProduct: {
+        type: Sequelize.INTEGER,
+        allowNull: false,
+    },
+    src: {
+        type: Sequelize.TEXT('long'),
+        allowNull: false,
+    },
+}, options);
+
+productImagesModel.belongsTo(productModel, { foreignKey: 'idProduct', as: 'product'})
+
+export { productImagesModel };
